# mems-ana

./: README.md  _config.yml  analysis-items.md  index.md
_includes/: head.html
_layouts/: default.html
assets/css/: mems.css
mems-ana_core/: CHANGELOG.md  README.md  index.md
mems-ana_core/mems_ana/: __init__.py
mems-ana_core/mems_ana.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mems-ana_core/mems_ana/electrical/: capacitance.py  drive.py  terminal.py
mems-ana_core/mems_ana/examples/: calibrate_kw.py  plate_frf_vi.py  plate_modes.py
mems-ana_core/mems_ana/geometry/: plate.py
mems-ana_core/mems_ana/io/: config.py
mems-ana_core/mems_ana/materials/: elastic.py  piezo.py  stack.py
mems-ana_core/mems_ana/physics/: plate_theory.py
mems-ana_core/mems_ana/rom/: plate_rom.py
mems-ana_core/mems_ana/tests/: test_kw_scaling.py
mems-ana_demo/: .gitignore  README.md  index.md  pyproject.toml
mems-ana_demo/examples/: animate_uz_midplane_typical_d33.py  plot_pe_loop.py  plot_uz_butterfly_d33_with_hyst.py  plot_uz_midplane_static8_d33.py
mems-ana_demo/src/mems_ana/: __init__.py  ferroelectric.py
